<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/empty_time_element_container">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:id="@+id/time_element_time_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/defaultTimeHours"
            android:id="@+id/timeHours"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=":"
            android:id="@+id/hourMinuteSeparator"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/timeHours"
            android:layout_toRightOf="@+id/timeHours"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/defaultTimeMinutes"
            android:id="@+id/timeMinutes"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/minuteSecondSeparator"
            android:layout_toRightOf="@+id/minuteSecondSeparator"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=":"
            android:id="@+id/minuteSecondSeparator"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/defaultTimeSeconds"
            android:id="@+id/timeSeconds"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/hourMinuteSeparator"
            android:layout_toRightOf="@+id/hourMinuteSeparator"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTimeComment"
        android:id="@+id/timeComment"
        android:layout_below="@+id/time_element_time_container"
        android:layout_centerHorizontal="true" />
</LinearLayout>